// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DirectoryList /> 1`] = `
<div
  className="directory-list"
>
  <ul
    className="directory-list-items"
  >
    <directory-list-item
      item={
        Object {
          "name": "..",
          "type": "directory",
        }
      }
      onClick={[Function]}
      type="directory"
    />
    <directory-list-item
      item={
        DirLine {
          "name": "folder_1",
          "permission": "drwxr-xr-x",
          "size": "3001",
          "timestamp": "2018-01-02 09:45",
          "type": "directory",
        }
      }
      onClick={[Function]}
    />
    <directory-list-item
      item={
        DirLine {
          "name": "file_1",
          "permission": "-rw-r--r--",
          "size": "42100",
          "timestamp": "2017-09-20 21:22",
          "type": "file",
        }
      }
      onClick={[Function]}
    />
    <directory-list-item
      item={
        DirLine {
          "name": "file_2",
          "permission": "-rw-r--r--",
          "size": "3125995",
          "timestamp": "2017-10-17 01:45",
          "type": "file",
        }
      }
      onClick={[Function]}
    />
  </ul>
</div>
`;

exports[`<DirectoryList /> should include 0 path when at /storage/emulated 1`] = `
<div
  className="directory-list"
>
  <ul
    className="directory-list-items"
  >
    <directory-list-item
      item={
        Object {
          "name": "..",
          "type": "directory",
        }
      }
      onClick={[Function]}
      type="directory"
    />
    <directory-list-item
      item={
        Object {
          "name": "0",
          "type": "directory",
        }
      }
      onClick={[Function]}
      type="directory"
    />
    <directory-list-item
      item={
        DirLine {
          "name": "folder_1",
          "permission": "drwxr-xr-x",
          "size": "3001",
          "timestamp": "2018-01-02 09:45",
          "type": "directory",
        }
      }
      onClick={[Function]}
    />
    <directory-list-item
      item={
        DirLine {
          "name": "file_1",
          "permission": "-rw-r--r--",
          "size": "42100",
          "timestamp": "2017-09-20 21:22",
          "type": "file",
        }
      }
      onClick={[Function]}
    />
    <directory-list-item
      item={
        DirLine {
          "name": "file_2",
          "permission": "-rw-r--r--",
          "size": "3125995",
          "timestamp": "2017-10-17 01:45",
          "type": "file",
        }
      }
      onClick={[Function]}
    />
  </ul>
</div>
`;

exports[`<DirectoryList /> should not include .. when at / 1`] = `
<div
  className="directory-list"
>
  <ul
    className="directory-list-items"
  >
    <directory-list-item
      item={
        DirLine {
          "name": "folder_1",
          "permission": "drwxr-xr-x",
          "size": "3001",
          "timestamp": "2018-01-02 09:45",
          "type": "directory",
        }
      }
      onClick={[Function]}
    />
    <directory-list-item
      item={
        DirLine {
          "name": "file_1",
          "permission": "-rw-r--r--",
          "size": "42100",
          "timestamp": "2017-09-20 21:22",
          "type": "file",
        }
      }
      onClick={[Function]}
    />
    <directory-list-item
      item={
        DirLine {
          "name": "file_2",
          "permission": "-rw-r--r--",
          "size": "3125995",
          "timestamp": "2017-10-17 01:45",
          "type": "file",
        }
      }
      onClick={[Function]}
    />
  </ul>
</div>
`;

exports[`<DirectoryList /> should render nothing without device 1`] = `null`;
